fix(hcp callout): Fix graphic text overlap (#1115)
Add margin right

--- a/src/components/dev-dot-content/mdx-components/mdx-hcp-callout/mdx-callout.module.css
+++ b/src/components/dev-dot-content/mdx-components/mdx-hcp-callout/mdx-callout.module.css
@@ -19,6 +19,10 @@
 
 	& .textContainer {
 		padding: 16px 22px;
+
+		@media (--dev-dot-tablet-up) {
+			margin-right: 25%;
+		}
 	}
 
 	& .heading {
